crates/ty_server/tests/e2e/snapshots/e2e__will_rename_files__overlapping_directory_and_file_batch_has_unique_edits.snap
---
source: crates/ty_server/tests/e2e/will_rename_files.rs
expression: edits
---
{
  "changes": {
    "file://<temp_dir>/consumer.py": [
      {
        "range": {
          "start": {
            "line": 0,
            "character": 7
          },
          "end": {
            "line": 0,
            "character": 18
          }
        },
        "newText": "new_pkg.sub"
      }
    ]
  }
}
